// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Avatar With Icon 1`] = `
<div
  className="css-psf7un-AvatarWrapper eklgmvl0"
  fontWeight="BOLD"
>
  <i
    className="css-6tw2qr-IconWrapper e1cr9qb30"
  >
    <svg
      fill="white"
      height="25px"
      viewBox="0 0 20 20"
      width="25px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8.46 18H11.39V10.7H13.84L14.21 7.86H11.39V6.04C11.39 5.22 11.62 4.66 12.8 4.66H14.31V2.11C14.05 2.08 13.16 2 12.12 2C9.94 2 8.46 3.33 8.46 5.76V7.86H6V10.7H8.46V18Z"
      />
    </svg>
  </i>
</div>
`;

exports[`Storyshots Atoms/Avatar With Src 1`] = `
<div
  className="css-psf7un-AvatarWrapper eklgmvl0"
  fontWeight="BOLD"
>
  <img
    alt="Avatar"
    className="css-1moa472-Img efl6h300"
    height="40px"
    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPegjNNBzO3-k5t6hTm1htv1kxyWSOtCRr3A&usqp=CAU"
    width="40px"
  />
</div>
`;

exports[`Storyshots Atoms/Avatar With Text 1`] = `
<div
  className="css-psf7un-AvatarWrapper eklgmvl0"
  fontWeight="BOLD"
  style={
    Object {
      "color": "white",
    }
  }
>
  YL
</div>
`;
